test_regress/t/t_class_ref_bad.out
%Error: Internal Error: t/t_class_ref_bad.v:15:11: ../V3LinkDot.cpp:#: Bad package link
   15 |       s = ClsRigh::m_s;   
      |           ^~~~~~~
                        ... See the manual at https://verilator.org/verilator_doc.html for more assistance.
